--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	</head>
 	<body>
 		<div id="app"></div>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
 		<script src="./dist/app.js"></script>
 		<script src="./main/index.js"></script>
 	</body>
